Closed Bug 1147446 Opened 10 years ago Closed 10 years ago

We should take Chromium fix in commit b533d6533585377edd63ec6500469f6c4fba602a to stop a memory leak.

Categories

(Core :: Security: Process Sandboxing, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox36 --- wontfix
firefox37 --- wontfix
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

Details

Attachments

(1 file)

See https://codereview.chromium.org/831423002/ for details. This may not have been biting us much, but could start to with EME coming along.
In my not very scientific test, if I run multiple GMP tests with [1] the baseline memory certainly seems to climb. This doesn't happen with the fix. I took the other change that had happened in the file as well, as it makes no functional difference. [1] http://mozilla.github.io/webrtc-landing/pc_test.html
Attachment #8583238 - Flags: review?(aklotz)
Attachment #8583238 - Flags: review?(aklotz) → review+
remote: https://hg.mozilla.org/integration/mozilla-inbound/rev/f3cc3b904308 Thanks for the quick review Aaron, particularly given how busy you are this week.
Comment on attachment 8583238 [details] [diff] [review] Chromium patch to fix memory leak in Windows sandbox sharedmem_ipc_server.cc. Approval Request Comment [Feature/regressing bug #]: This has been in the Chromium Windows sandbox code since we shipped it. (In fact since Chromium shipped it as well.) [User impact if declined]: Going by the Chromium bug comments, each sandboxed process will continue to leak 64KB when it shuts down. We are likely to be getting more GMP processes with EME shipping in Fx38. [Describe test coverage new/current, TreeHerder]: The only things that we ship that use the sandbox are GMPs (OpenH264 and soon to be EME) and these have mochitests. [Risks and why]: Low: It's a small obvious fix and is already shipping in the Chrome stable release (announced 3rd March). [String/UUID change made/needed]: None.
Attachment #8583238 - Flags: approval-mozilla-aurora?
Attachment #8583238 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: